# ai-research-assistant

./: .gitignore  .pdm-python  dockerfile  pyproject.toml
.github/workflows/: aws.yml
src/: api.py
src/ai_research_assistant/: agent.py  main.py  tools.py  utils.py
terraform/: .terraform.lock.hcl  backend.tf  main.tf  outputs.tf  providers.tf  variables.tf
