[project]
name = "AI-Research-Assistant"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Prasad-178", email = "prasadjs178@gmail.com"},
]
dependencies = [
    "langgraph>=0.3.21", 
    "openai>=1.69.0", 
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "boto3>=1.28.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0"
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
